--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@ No matter what your age, it`s absolutely essential to have a plan in
 place to protect your loved ones when you are no longer able. Final
 Expense insurance will pay for your funeral service, bills and other
 associated costs. <span class="art-button-wrapper"> <span class="l"> </span> <span class="r"> </span>
-<a class="art-button" href="javascript:void(0)">Read
+<a class="art-button" href="https://form.jotform.com/jsform/71087175484160" target_blank="">Read
 more...</a> </span></p>
 </div>
 </div>
