--- a/index.insurance.bak.xhtml
+++ b/index.insurance.bak.xhtml
@@ -54,10 +54,15 @@ Insurance, Retirement and Investment Needs. </p>
 <li> <a href="https://docs.google.com/forms/d/e/1FAIpQLSfBS8gcE6vkTiDb6IkF8VnsOuXlnE-Gi3sS3DXcZPKNBif7-w/viewform"><span class="l"></span><span class="r"></span><span class="t">Contact Us</span></a>
 </li>
 </ul>
+<div id="slider-panel" style="display: block;">
+<ul id="scroller" name="scroller" class="simply-scroll-list" style="width: 3640px;">
+<li>
+<marquee direction="right">
 <p>
-</p>
-<marquee direction="right" behavior="scroll" bgcolor="#fff" onmouseover="this.stop()" onmouseout="this.start()">
-<img src="bannericons/assurant.jpg" border="2" /><img src="bannericons/bannerlife.jpg" border="2" /><img src="bannericons/cigna.jpg" border="2" /><img src="bannericons/coventry.jpg" border="2" /><img src="bannericons/humana.jpg" border="2" /><img src="bannericons/legacy.jpg" border="2" /><img src="bannericons/new-era.jpg" border="2" /><img src="bannericons/north-american.jpg" border="2" /><img src="bannericons/philadelphia-american.jpg" border="2" /><img src="bannericons/sentinel.jpg" border="2" /><img src="bannericons/transamerica.jpg" border="2" /><img src="bannericons/wellcare.jpg" border="2" /></marquee>
+</p><h1>Test </h1>
+</marquee>
+</li>
+<div class="custom simply-scroll-container">
 <div class="simply-scroll-clip"></div>
 <div class="art-content-layout">
 <div class="art-content-layout-row">
@@ -98,8 +103,7 @@ more...</a> </p>
 <div class="overview-table-inner">
 <h4>Health Insurance</h4>
 <img style="width: 55px; height: 55px;" src="images/07.png" alt="an image" class="image" />
-<p>Nearly everybody is confused about their healthcare
-options
+<p>Nearly everybody is confused about their healthcare options
 -
 and rightly so. You can´t rely on politicians or media reports for a
 clear and unbiased explanation. You want the facts, not opinions. We´d
@@ -324,17 +328,15 @@ Expense</a></li>
 <div class="art-blockcontent-body"><!-- block-content -->
 <div>
 <ul>
-<h2>What is?</h2>
-<li><a href="#">Term Life</a></li>
-<li><a href="#">Whole Life</a></li>
-<li><a href="#">Indexed Products</a></li>
-<li><a href="#">Medicare</a></li>
-<li><a href="#">Medicare Supplement</a></li>
-<li><a href="#">Tele-Medicine</a></li>
+<li><a href="#">Home</a></li>
+<li><a href="#">Overview</a></li>
+<li><a href="#">Demo</a></li>
+<li><a href="#">Download</a></li>
+<li><a href="#">FAQ</a></li>
+<li><a href="#">Hyperlink</a></li>
 <li><a href="#" class="visited">Visited
 link</a></li>
-<li><a href="#" class="hover">Hovered
-link</a></li>
+<li><a href="#" class="hover">Hovered link</a></li>
 </ul>
 <p><b>Jun 14, 2008</b><br />
 Aliquam sit amet felis. Mauris semper, velit semper laoreet dictum,
@@ -398,10 +400,13 @@ Copyright © 2010 ---. All Rights Reserved.</p>
 </div>
 <div class="cleared"></div>
 </div>
+</ul>
 </div>
 <div class="cleared"></div>
 <p class="art-page-footer"><a href="http://www.templatesfordesign.com/">Web Template</a>
 is valid XHTML Transitional.</p>
+</div>
+</div>
 </div>
 </div>
 </body></html>
